K8S/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jdsession13-backend
  namespace: my-namespace
spec:
  replicas: 2
  selector:
    matchLabels:
      app: jdsession13-backend
  template:
    metadata:
      labels:
        app: jdsession13-backend
    spec:
      containers:
        - name: jdsession13-backend
          image: kathanshah1893/jdsession13-backend:latest
          ports:
            - containerPort: 8000
          imagePullPolicy: Always
