K8S/django-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
      - name: django
        image: kathanshah1893/jdsession13-backend:latest  # Replace with your Docker Hub username
        ports:
        - containerPort: 8000
