K8S/service.yml
apiVersion: v1
kind: Service
metadata:
  name: jdsession13-backend-service
spec:
  selector:
    app: jdsession13-backend
  type: NodePort
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30080  # This must be between 30000-32767
